--- a/README.textile
+++ b/README.textile
@@ -1,1 +1,12 @@
 h1. Oh My God This Will Blow Your Mind!
+
+h3. This utility will do the following:
+
+* update the target with the default settings in master (those elements not marked with an "env" attribute or with env="default")
+* update the target with the environment-specific settings in master (those elements marked with "env" attribute equal to the current environment)
+
+h3. Notes: 
+
+* appSettings/add elements will be matched by the "add" attribute
+* connectionStrings/add elements will be matched by the "name" attribute
+* all other elements with "env" attribute will be inserted or will replace existing element
